--- a/pom.xml
+++ b/pom.xml
@@ -60,18 +60,10 @@
 		</dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-
-		
-
-
-
-
-
 
 
 
